--- a/pom.xml
+++ b/pom.xml
@@ -97,11 +97,11 @@
 <build>
 	<finalName>maven-unit-test</finalName>
 	<plugins>
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-surefire-plugin</artifactId>
-			<version>2.12.4</version>
-		</plugin>
+<!--		<plugin>-->
+<!--			<groupId>org.apache.maven.plugins</groupId>-->
+<!--			<artifactId>maven-surefire-plugin</artifactId>-->
+<!--			<version>2.12.4</version>-->
+<!--		</plugin>-->
 		<plugin>
 			<groupId>org.jacoco</groupId>
 			<artifactId>jacoco-maven-plugin</artifactId>
