--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
 	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
+		<version>4.11</version>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.assertj</groupId>
+		<artifactId>assertj-core</artifactId>
+		<version>3.6.2</version>
 		<scope>test</scope>
 	</dependency>
 	<dependency>
