get post put delete wokring

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
 		<scope>test</scope>
 	</dependency>
 	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<optional>true</optional>
+	</dependency>
+	<dependency>
 		<groupId>io.cucumber</groupId>
 		<artifactId>cucumber-java</artifactId>
 		<version>7.1.0</version>
@@ -88,6 +93,10 @@
 		<version>1.10.19</version>
 		<scope>test</scope>
 	</dependency>
+	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+	</dependency>
 
 
 </dependencies>
@@ -128,6 +137,18 @@
 					</goals>
 				</execution>
 			</executions>
+		</plugin>
+		<plugin>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+			<configuration>
+				<excludes>
+					<exclude>
+						<groupId>org.projectlombok</groupId>
+						<artifactId>lombok</artifactId>
+					</exclude>
+				</excludes>
+			</configuration>
 		</plugin>
 	</plugins>
 </build>
